K8S/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: command-depl
spec:
 replicas: 1
 selector:
  matchLabels:
   app: commandservice
 template:
  metadata:
   labels:
    app: commandservice
  spec:
   containers:
    - name: commandservice
      image: dinu1993/commandservice:latest	
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: command-clusterip-serv
spec: 
 type: ClusterIP
 selector:
  app: commandservice
 ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
