K8S/platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: platform-depl
spec:
 replicas: 1
 selector:
  matchLabels:
   app: platformservice
 template:
  metadata:
   labels:
    app: platformservice
  spec:
   containers:
    - name: platformservice
      image: dinu1993/platformservice:latest	
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: palform-clusterip-serv
spec: 
 type: ClusterIP
 selector:
  app: platformservice
 ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: plafromgrpc
    protocol: TCP
    port: 5001
    targetPort: 5001
