K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 name: ingress-srv
 annotations: 
  kubernetes.io/ingress.class: "nginx"
  nginx.ingress.kubernetes.io/use-regex: "true"
spec:
 rules:
  - host: acme.com
    http:
     paths:
      - path: /api/Platform
        pathType: Prefix
        backend:
         service: 
          name: palform-clusterip-serv
          port:
           number: 80
      - path: /api/c/Platform
        pathType: Prefix
        backend:
         service:
          name: command-clusterip-serv
          port:
           number: 80
